# regx.h

./: .gitignore  CMakeLists.txt  README.md
src/: regx.c  regx.h
tests/: test.c
